feat(src): auth working

--- a/public/index.html
+++ b/public/index.html
@@ -1,85 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test Auth</title>
 </head>
 <body>
+    <h1>Test de l'authentification</h1>
 
-    <ul id="messages"></ul>
-	<form id="form">
-		<input type="text" name="input" id="input" style="width:300px">
-		<button type="submit">Envoyer</button>
-	</form>
+    <!-- Formulaire d'inscription -->
+    <h2>Inscription</h2>
+    <form id="register-form">
+        <input type="text" id="register-name" placeholder="name d'utilisateur" required>
+        <input type="password" id="register-password" placeholder="Mot de passe" required>
+        <button type="submit">S'inscrire</button>
+    </form>
+    <p id="register-result"></p>
 
+    <!-- Formulaire de connexion -->
+    <h2>Connexion</h2>
+    <form id="login-form">
+        <input type="text" id="login-name" placeholder="name d'utilisateur" required>
+        <input type="password" id="login-password" placeholder="Mot de passe" required>
+        <button type="submit">Se connecter</button>
+    </form>
+    <p id="login-result"></p>
 
-    <script
-      src="https://code.jquery.com/jquery-3.7.1.min.js"
-      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-      crossorigin="anonymous"></script>
-	<script src="/socket.io/socket.io.js"></script>
-	<script type="text/javascript">
-
-        // ?? le temps de chargement de jquery
-        jQuery(document).ready(function() {
-
-            var socket = io();
-            let input = $("#input");
-            let userName = "";
-            let messages = $("#messages");
-
-            input.attr("placeholder","Merci de saisir votre nom")
-
-
-            // lorsque l'utilisateur click sur submit
-            $('#form').submit(function (event) {
-                event.preventDefault();
-
-                if (userName == "") {
-                    userName = input.val()
-                    socket.emit("register", userName)
-                    input.val("");
-                    input.attr("placeholder","Bonjour " + userName + " tu peut envoyer un message")
-                }else{
-                    // je vais envoyer un message
-                    socket.emit("send", {
-                        from:userName, 
-                        msg : input.val()
-                    })
-                    input.val("");
-                }
-             
-             });
-
-
-            socket.on("recupererMsg", function(msg){
-                messages.append($("<li>").text(msg))
-            })
-
-        });
-        
-		var form = document.getElementById("form")
-		var input = document.getElementById("input")
-        var messages = document.getElementById("messages")
-
-		form.addEventListener("submit" , function(e) {
-			e.preventDefault(); // stopper la redirection
-			if(input.value){
-                // envoyer
-				socket.emit("send", input.value)
-				input.value = ""
-			}
-		});
-
-        // on : réception
-        socket.on("recupererMsg", function(msg){
-            // créer un li
-            var li = document.createElement("li");
-            li.textContent = msg;
-            messages.appendChild(li)
-        })
-
-	</script>
+    <!-- Déplacement du script ici -->
+    <script src="auth.js"></script>
 </body>
 </html>
