--- a/public/tchat.html
+++ b/public/tchat.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Application</title>
+    <title>Tchat Application</title>
 </head>
 <body>
     <div id="userListContainer">
         <h3>Utilisateurs</h3>
         <ul id="userList"></ul>
     </div>
-
+    <h3>Le Tcaht</h3>
     <ul id="messages"></ul>
     <form id="form">
         <input type="text" id="input" style="width:300px;" placeholder="Tapez votre message...">
