--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Auth</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Auth Tchat App</title>
 </head>
 <body>
-    <h1>Test de l'authentification</h1>
+    <h1>Authentification</h1>
 
     <!-- Formulaire d'inscription -->
     <h2>Inscription</h2>
     <form id="register-form">
-        <input type="text" id="register-name" placeholder="name d'utilisateur" required>
+        <input type="text" id="register-name" placeholder="Name" required>
         <input type="password" id="register-password" placeholder="Mot de passe" required>
         <button type="submit">S'inscrire</button>
     </form>
@@ -20,7 +21,7 @@
     <!-- Formulaire de connexion -->
     <h2>Connexion</h2>
     <form id="login-form">
-        <input type="text" id="login-name" placeholder="name d'utilisateur" required>
+        <input type="text" id="login-name" placeholder="Name" required>
         <input type="password" id="login-password" placeholder="Mot de passe" required>
         <button type="submit">Se connecter</button>
     </form>
