--- a/public/tchat.html
+++ b/public/tchat.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Tchat Application</title>
+    <style>
+        #messages {
+            max-height: 400px;
+            overflow-y: auto;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
     <div id="userListContainer">
@@ -49,8 +57,8 @@
 
             socket.on('updateFriendsList', function(friends) {
                 friendsList.empty();
-                friends.forEach(friends => {
-                    const listItem = `<li>${friends.name}</li>`;
+                friends.forEach(friend => {
+                    const listItem = `<li>${friend.name}</li>`;
                     friendsList.append(listItem);
                 });
             });
@@ -67,6 +75,7 @@
             socket.on('recupererMsg', function(data) {
                 const listItem = $("<li>").text(`${data.from}: ${data.message}`);
                 messages.append(listItem);
+                messages.scrollTop(messages[0].scrollHeight);
             });
 
             socket.on('errorMessage', function(error) {
